Fix getUsers